:bug: Fix many issues like targetted pods status and query validation

--- a/src/components/UI/StatusBar/StatusBar.module.sass
+++ b/src/components/UI/StatusBar/StatusBar.module.sass
@@ -19,13 +19,11 @@
     overflow: hidden
     max-width: clamp(150px,50%,600px)
 
-    &.banner
-        top: 53px
-
     .podsCount
         display: flex
         justify-content: center
         font-weight: 600
+        text-align: center
 
         .podsCountText
             width: 100%
