:zap: Replace the `capture` field with `tls` in `Entry` interface

--- a/src/components/EntryListItem/EntryListItem.module.sass
+++ b/src/components/EntryListItem/EntryListItem.module.sass
@@ -37,10 +37,10 @@
   width: 185px
   text-align: left
 
-.capture
+.padlock
   margin-top: -60px
 
-.capture img
+.padlock img
   height: 14px
   margin-top: 12px
   margin-left: -2px
