--- a/src/components/EntryDetailed/TcpStream/TcpStream.module.sass
+++ b/src/components/EntryDetailed/TcpStream/TcpStream.module.sass
@@ -9,24 +9,37 @@
   padding: 0 8px
   border-radius: 4px
   border: solid 1px transparent
-
-  &:not(:first-child)
-    margin-top: 10px
+  margin-top: 10px
 
 
-.marginLeft40
-  margin-left: 40px
-
-.marginLeft80
-  margin-left: 80px
+.marginLeft10
+  margin-left: 10px
 
 .title
+  margin-top: 2px
   font-weight: bold
 
-  font-weight: bold
+.separator
+  display: flex
+  border-right: 1px solid $data-background-color
+  padding-right: 12px
 
-@media (max-width: 1760px)
-  .timestamp
+.button
+  font-weight: 600 !important
+  border-radius: 4px !important
+  color: #fff
+  text-transform: none !important
+  font-size: 12px
+  height: 24px
+
+@media (max-width: 1400px)
+  .pcapButtonWrapper
     display: none
-  .separatorRight
-    border-right: 0px
+
+@media (max-width: 1220px)
+  .replayButtonWrapper
+    display: none
+
+@media (max-width: 1030px)
+  .nodeWrapper
+    display: none
