:art: Reduce duplication in the styling of `Filters` component

--- a/src/components/Filters/Filters.module.sass
+++ b/src/components/Filters/Filters.module.sass
@@ -1,26 +1,43 @@
 @import "../../variables.module"
 
 .container
-    display: flex
-    flex-direction: row
-    align-items: center
-    padding: .5rem 0
-    border-bottom: 1px solid #BCC6DD
-    margin-right: 20px
+  display: flex
+  flex-direction: row
+  align-items: center
+  padding: .5rem 0
+  border-bottom: 1px solid #BCC6DD
+  margin-right: 20px
+
+.bigButton
+  margin: 2px 0px 0px 0px
+  background-color: $blue-color
+  font-weight: 600 !important
+  border-radius: 4px
+  color: #fff
+  text-transform: none !important
+
+.smallButton
+  margin: 2px 0px 0px 10px
+  min-width: 26px
+  background-color: $blue-color
+  font-weight: 600 !important
+  border-radius: 4px
+  color: #fff
+  text-transform: none !important
 
 .filterLabel
-    color: #8f9bb2
-    margin-right: 6px
-    font-size: 11px
-    margin-bottom: 4px
+  color: #8f9bb2
+  margin-right: 6px
+  font-size: 11px
+  margin-bottom: 4px
 
 .icon
-    fill: #627ef7
+  fill: #627ef7
 
 .filterContainer
-    padding-right: 14px
-    display: flex
-    flex-direction: column
+  padding-right: 14px
+  display: flex
+  flex-direction: column
 
 .filterText
   input
